# fnc

./: README.md  fnc.cabal  stack.yaml
src/: :w  Lib.hs
